--- a/CAS.CodeProtect/Properties/AssemblyInfo.tt
+++ b/CAS.CodeProtect/Properties/AssemblyInfo.tt
@@ -35,7 +35,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyFileVersion("<#= CASCodeProtectProductVersion #>")]
 
 [assembly: System.CLSCompliantAttribute(true)]
-[assembly: System.Runtime.CompilerServices.InternalsVisibleTo( "CAS.Lib.CodeProtect.Tests, " +  
+[assembly: System.Runtime.CompilerServices.InternalsVisibleTo( "CAS.CodeProtect.UnitTests, " +  
   "PublicKey=0024000004800000940000000602000000240000525341310004000001000100b3cff1bec656a6"+
             "e3784c75cacce8ee3bc695d0ce135d820c86465eb49b2353f0438d28ad9a458e5350c0c141393d"+
              "d9ad606bd9f4e0a8e1b0c49fa37835630b16798ece56df81c756f4c6bd37f07d68cc91ebfa7be7"+
