CAS new release - working on CAS.RealTime - the AdvancedDelimitedListTraceListener has been moved to CodeProtect project. - added config file to the configuration - Unit tested Issue #: 4878

--- a/CAS.CodeProtect/CAS.CodeProtect.tt
+++ b/CAS.CodeProtect/CAS.CodeProtect.tt
@@ -26,6 +26,7 @@
   </metadata>
   <files>
     <file src="bin\Release\CAS.CodeProtect.dll" target="lib\net451\CAS.CodeProtect.dll" />
+    <file src="bin\Release\CAS.CodeProtect.dll.config" target="lib\net451\CAS.CodeProtect.dll.config" />
     <file src="bin\Release\CAS.CodeProtect.XML" target="lib\net451\CAS.CodeProtect.XML" />
     <file src="bin\Release\Microsoft.Build.Framework.dll" target="lib\net451\Microsoft.Build.Framework.dll" />
     <file src="bin\Release\Microsoft.Build.Tasks.Core.dll" target="lib\net451\Microsoft.Build.Tasks.Core.dll" />
