--- a/CAS.CodeProtect.ScriptsUnitTest/Properties/AssemblyInfo.tt
+++ b/CAS.CodeProtect.ScriptsUnitTest/Properties/AssemblyInfo.tt
@@ -31,7 +31,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyVersion("<#= CASCodeProtectProductVersion #>.*")]
 [assembly: AssemblyFileVersion("<#= CASCodeProtectProductVersion #>")]
 
-<#@ include file = "..\..\..\PR39-CommonResources\T4Definitions\CAS.OPC.t4" #>
+<#@ include file = "..\..\..\CommonResources\T4Definitions\CAS.OPC.t4" #>
 <#+
 string m_AssemblyTitle = "CAS.CodeProtect.Scripts.UnitTest";
 #>
