--- a/CAS.CodeProtect/CAS.CodeProtect.tt
+++ b/CAS.CodeProtect/CAS.CodeProtect.tt
@@ -34,4 +34,4 @@
   </files>
 </package>
 
-<#@ include file = "..\..\PR39-CommonResources\T4Definitions\CAS.OPC.t4" #>
+<#@ include file = "..\..\CommonResources\T4Definitions\CAS.OPC.t4" #>
