--- a/CAS.CodeProtect/Properties/AssemblyInfo.tt
+++ b/CAS.CodeProtect/Properties/AssemblyInfo.tt
@@ -1,51 +1,34 @@
 ﻿<#@ template debug="false" hostspecific="false" language="C#" #>
 <#@ output extension=".cs" #>
-//<summary>
-//  Title   : Assembly info for: <#=CASCodeProtectProductName#>
-//  System  : Microsoft Visual C# .NET
-//  $LastChangedDate: 2014-10-17 23:06:15 +0200 (Pt, 17 paź 2014) $
-//  $Rev:  $
-//  $LastChangedBy:  $
-//  $URL:  $
-//  $Id:  $
+//___________________________________________________________________________________
 //
 //  <#=AssemblyCopyright#>
-//  <#=Phone#>
-//  <#=Email#>
-//  <#=Url#>
-//</summary>
+//
+//  To be in touch join the community at GITTER: https://gitter.im/mpostol/OPC-UA-OOI
+//___________________________________________________________________________________
 
 using System.Reflection;
 using System.Runtime.CompilerServices;
 using System.Runtime.InteropServices;
 
-[assembly: AssemblyTitle("<#=CASCodeProtectProductName#>")]
-[assembly: AssemblyDescription("<#=CoreProductName#>: <#=CASCodeProtectProductName#>")]
+[assembly: AssemblyTitle("<#=Title#>")]
+[assembly: AssemblyDescription("<#= Description #>")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("<#=AssemblyCompany#>")]
-[assembly: AssemblyProduct("<#=CoreProductName#>")]
+[assembly: AssemblyProduct("<#=CASCodeProtectProductName#>")]
 [assembly: AssemblyCopyright("<#=AssemblyCopyright#>")]
-[assembly: AssemblyTrademark("<#=CoreProductTrademark#>")]
+[assembly: AssemblyTrademark("<#=CASCodeProtectProductTrademark#>")]
 [assembly: AssemblyCulture("")]
-
 [assembly: ComVisible(false)]
-// The following GUID is for the ID of the typelib if this project is exposed to COM
 [assembly: Guid("5160a380-4fa0-4dd7-9242-1a55c295f3ed")]
 [assembly: AssemblyVersion("<#= CASCodeProtectProductVersion #>.*")]
 [assembly: AssemblyFileVersion("<#= CASCodeProtectProductVersion #>")]
-
 [assembly: System.CLSCompliantAttribute(true)]
 [assembly: System.Runtime.CompilerServices.InternalsVisibleTo( "CAS.CodeProtect.UnitTests, " +  
-  "PublicKey=0024000004800000940000000602000000240000525341310004000001000100b3cff1bec656a6"+
-            "e3784c75cacce8ee3bc695d0ce135d820c86465eb49b2353f0438d28ad9a458e5350c0c141393d"+
+  "PublicKey= 0024000004800000940000000602000000240000525341310004000001000100b3cff1bec656a6"+
+             "e3784c75cacce8ee3bc695d0ce135d820c86465eb49b2353f0438d28ad9a458e5350c0c141393d"+
              "d9ad606bd9f4e0a8e1b0c49fa37835630b16798ece56df81c756f4c6bd37f07d68cc91ebfa7be7"+
              "8149d016bbc6a364beda14fc1119698d8c8d9923805b40122bf594f08cc29f41cb0a31e5e141e3"+
              "f2421b9d" )]
-[assembly: InternalsVisibleTo( "LicenseContainer.UT, " +
-  "PublicKey=0024000004800000940000000602000000240000525341310004000001000100b3cff1bec656a6"+
-            "e3784c75cacce8ee3bc695d0ce135d820c86465eb49b2353f0438d28ad9a458e5350c0c141393d"+
-            "d9ad606bd9f4e0a8e1b0c49fa37835630b16798ece56df81c756f4c6bd37f07d68cc91ebfa7be7"+
-            "8149d016bbc6a364beda14fc1119698d8c8d9923805b40122bf594f08cc29f41cb0a31e5e141e3"+
-            "f2421b9d")]
 
-<#@ include file = "..\..\..\CommonResources\T4Definitions\CAS.OPC.t4" #>
+<#@ include file = "..\..\SolutionMetadataTemplate.t4" #>
